--- a/cara-mudah-menggali-potensi-profit-di-sugar-rush-1000-tanpa-mengandalkan-pola.html
+++ b/cara-mudah-menggali-potensi-profit-di-sugar-rush-1000-tanpa-mengandalkan-pola.html
@@ -179,7 +179,7 @@
 
     <section class='n-container m-b-normal'>
         <div class='container' style='text-align: center;'>
-            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/cara-mudah-menggali-potensi-profit-di-sugar-rush-1000-tanpa-mengandalkan-pola.html">Cara Mudah Menggali Potensi Profit di Sugar Rush 1000 Tanpa Mengandalkan Pola</a>. All Rights Reserved.</strong></span>
+            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/cara-mudah-menggali-potensi-profit-di-sugar-rush-1000-tanpa-mengandalkan-pola.html">Menggali Profit Sugar Rush 1000</a>. All Rights Reserved.</strong></span>
         </div>
     </section>
     
