--- a/momen-indah-dalam-sweet-bonanza-1000-anda-sekarang-juga.html
+++ b/momen-indah-dalam-sweet-bonanza-1000-anda-sekarang-juga.html
@@ -177,7 +177,7 @@
 
     <section class='n-container m-b-normal'>
         <div class='container' style='text-align: center;'>
-            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/momen-indah-dalam-sweet-bonanza-1000-anda-sekarang-juga.html">Jangan Sampai Ketinggalan Momen Indah dalam Sweet Bonanza 1000 Anda Sekarang Juga!</a>. All Rights Reserved.</strong></span>
+            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/momen-indah-dalam-sweet-bonanza-1000-anda-sekarang-juga.html">Momen Sweet Bonanza 1000</a>. All Rights Reserved.</strong></span>
         </div>
     </section>
     
