--- a/supir-galon-pg-soft.html
+++ b/supir-galon-pg-soft.html
@@ -177,7 +177,7 @@
 
     <section class='n-container m-b-normal'>
         <div class='container' style='text-align: center;'>
-            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/supir-galon-pg-soft.html">Supir Galon di Surabaya Menjadi Jutawan Mendadak Setelah Menang di PG Soft! Dengan Pola Live RTP Gratis yang Direkomendasikan Oleh Agus</a>. All Rights Reserved.</strong></span>
+            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/supir-galon-pg-soft.html">Supir Galon Pg Soft</a>. All Rights Reserved.</strong></span>
         </div>
     </section>
     
