--- a/tips-ampuh-agar-selalu-menang-di-sweet-bonanza-x1000.html
+++ b/tips-ampuh-agar-selalu-menang-di-sweet-bonanza-x1000.html
@@ -179,7 +179,7 @@
 
     <section class='n-container m-b-normal'>
         <div class='container' style='text-align: center;'>
-            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/tips-ampuh-agar-selalu-menang-di-sweet-bonanza-x1000.html">Tips Ampuh Agar Selalu Menang di Sweet Bonanza x1000</a>. All Rights Reserved.</strong></span>
+            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/tips-ampuh-agar-selalu-menang-di-sweet-bonanza-x1000.html">Tips Ampuh Sweet Bonanza x1000</a>. All Rights Reserved.</strong></span>
         </div>
     </section>
     
