--- a/trik-pola-rahasia-di-gates-of-olympus-bantu-ryan-sukses-cuan-rp-50-juta.html
+++ b/trik-pola-rahasia-di-gates-of-olympus-bantu-ryan-sukses-cuan-rp-50-juta.html
@@ -201,7 +201,7 @@
 
     <section class='n-container m-b-normal'>
         <div class='container' style='text-align: center;'>
-            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/trik-pola-rahasia-di-gates-of-olympus-bantu-ryan-sukses-cuan-rp-50-juta.html">Fenomena Baru! Trik Pola RTP Rahasia di Gates of Olympus Bantu Ryan Sukses Cuan Rp 50 Juta</a>. All Rights Reserved.</strong></span>
+            <span><strong>&copy; 2024 <a href="https://sekolahnews.github.io/reload/trik-pola-rahasia-di-gates-of-olympus-bantu-ryan-sukses-cuan-rp-50-juta.html">Fenomena Baru Gates of Olympus</a>. All Rights Reserved.</strong></span>
         </div>
     </section>
     
